--- a/P2/Project2.ipynb
+++ b/P2/Project2.ipynb
@@ -190,7 +190,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The chart below shows the mean number of births for each month of the year of the general population. As could be observed, there is a slight increase of births over the summer (July to September) and a decrease in February."
+    "The chart below shows the mean number of births for each month of the year of the general population. As could be observed, there is a slight increase in births over the summer (July to September) and a decrease in February."
    ]
   },
   {
@@ -964,7 +964,7 @@
    "metadata": {},
    "source": [
     "### 3. Deviations between birth rates\n",
-    "The deviations between birth rates is calculated subtracting the baseball players birth rate distribution from the general population birth rate distribution."
+    "The deviations between birth rates are calculated subtracting the baseball players birth rate distribution from the general population birth rate distribution."
    ]
   },
   {
