--- a/P3/Project3.ipynb
+++ b/P3/Project3.ipynb
@@ -37,7 +37,7 @@
     "\n",
     "### Map Area\n",
     "\n",
-    "The metropolitan area choosen for this project was Vila Velha, Brazil.\n",
+    "The metropolitan area chosen for this project was Vila Velha, Brazil.\n",
     "\n",
     "* [OpenStreetMap link](https://www.openstreetmap.org/relation/1825815)\n",
     "* [OSM file](https://s3.amazonaws.com/mapzen.odes/ex_fFDuD5tRsSCfuQwG1w9MHwL27gfpB.osm.bz2)\n",
@@ -956,9 +956,9 @@
    "source": [
     "As can be observed, more than 40% of the restaurants don't have the cuisine field defined. This is an issue if this dataset would be used, for instance, by a restaurant recommendation app.\n",
     "\n",
-    "One way to improve the quality of the dataset is to try to infer the cuisine from the restaurant name. The query below lists the name of all restaurants without cuisine.\n",
+    "One way to improve the quality of the dataset is to try to infer the cuisine from the restaurant name. For example, if the restaurant has \"Natural\" on its name, we could infer it's a vegetarian restaurant.\n",
     "\n",
-    "For example, if the restaurant has \"Natural\" on its name, we could infer it's a vegetarian restaurant."
+    "The query below lists the name of all restaurants without cuisine."
    ]
   },
   {
