Incorporating feedback from the reviewer

--- a/P3/Project3.ipynb
+++ b/P3/Project3.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -78,7 +78,7 @@
      "text": [
       "defaultdict(<class 'set'>,\n",
       "            {'BAIRRO': {'BAIRRO PALMEIRAS'},\n",
-      "             'BR': {'BR - 262', 'BR 262'},\n",
+      "             'BR': {'BR 262', 'BR - 262'},\n",
       "             'BR-101': {'BR-101'},\n",
       "             'BR-262': {'BR-262'},\n",
       "             'ESTRADA': {'ESTRADA 101 APOS POSTO Nossa Senhora do APARECIDA',\n",
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -156,10 +156,10 @@
      "output_type": "stream",
      "text": [
       "Rod. Es-080 - Governador José Sette => Rodovia Es-080 - Governador José Sette\n",
-      "ESTRADA CAMBOAPINA => Estrada CAMBOAPINA\n",
-      "ESTRADA PARA O ACQUAMANIA => Estrada PARA O ACQUAMANIA\n",
       "ESTRADA PARA PALMEIRAS => Estrada PARA PALMEIRAS\n",
       "ESTRADA 101 APOS POSTO Nossa Senhora do APARECIDA => Estrada 101 APOS POSTO Nossa Senhora do APARECIDA\n",
+      "ESTRADA CAMBOAPINA => Estrada CAMBOAPINA\n",
+      "ESTRADA PARA O ACQUAMANIA => Estrada PARA O ACQUAMANIA\n",
       "RODOVIA BR 262 => Rodovia BR 262\n",
       "FAZENDA SAO DOMINGOS => Fazenda SAO DOMINGOS\n",
       "Praca Henrique Meyerfreund => Praça Henrique Meyerfreund\n",
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -290,18 +290,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "29047850 => None\n",
-      "29.053-245 => None\n",
-      "29102195 => 29102-195\n",
-      "3149-7327 => None\n",
-      "29.100-200 => None\n",
       "29010340 => None\n",
-      "29100000 => None\n",
+      "29.053-245 => None\n",
       "29050705 => None\n",
-      "29102240 => 29102-240\n",
-      "29017950 => None\n",
       "29041265 => None\n",
-      "29010906 => None\n"
+      "29047850 => None\n",
+      "29102195 => 29102-195\n",
+      "29102240 => 29102-240\n",
+      "29.100-200 => None\n",
+      "29100000 => None\n",
+      "29010906 => None\n",
+      "3149-7327 => None\n",
+      "29017950 => None\n"
      ]
     }
    ],
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -529,7 +529,7 @@
        "0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -568,7 +568,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'_id': ObjectId('58bf496db2e6d113c403e038'),\n",
+      "{'_id': ObjectId('58c9865a40efe73b937a4e4f'),\n",
       " 'created': {'changeset': '6563535',\n",
       "             'timestamp': '2010-12-06T15:31:54Z',\n",
       "             'uid': '31385',\n",
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -642,7 +642,7 @@
        "514356"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -671,7 +671,7 @@
        "451964"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -700,7 +700,7 @@
        "62387"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -718,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -729,7 +729,7 @@
        "163"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -890,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -925,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -963,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -1027,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -1038,12 +1038,16 @@
      "text": [
       "Grelhados e Massas Restaurante => steak_house\n",
       "Sabor Natural => vegetarian\n",
+      "Restaurante Sol & Mar => seafood\n",
       "Outback => steak_house\n",
       "Restaurante Vegetariano => vegetarian\n",
+      "Terra do Sabor Restaurante e Self-Service => vegetarian\n",
       "Belas Ondas Restaurante => seafood\n",
       "Ilha do Caranguejo => seafood\n",
       "Bifão Steakhouse => steak_house\n",
-      "Brazillian Burger => burger\n"
+      "Brazillian Burger => burger\n",
+      "Restaurante Mar e Terra => seafood\n",
+      "Restaurante Mar e Terra => vegetarian\n"
      ]
     }
    ],
@@ -1056,12 +1060,25 @@
     "    \"Caranguejo\" : \"seafood\",\n",
     "    \"Burger\" : \"burger\",\n",
     "    \"Steakhouse\" : \"steak_house\",\n",
-    "    \"Ondas\" : \"seafood\"}\n",
+    "    \"Ondas\" : \"seafood\",\n",
+    "    \"Mar\" : \"seafood\",\n",
+    "    \"Terra\": \"vegetarian\"}\n",
     "\n",
     "for name in restaurants_without_cuisine:\n",
     "    for k, v in name_cuisine_mapping.items():\n",
     "        if k in name:\n",
     "            print(\"{} => {}\".format(name, v))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This apprach has some issues that have to be addressed. \n",
+    "\n",
+    "For instance, \"Mar\" (sea in Portuguese) was mapped to \"seafood\" and \"Terra\" (soil in Portuguese) was mapped to \"vegetarian\". The restaurant \"Restaurante Mar e Terra\" has both words on its name and the classification could be wrong. In this case, we could define a prioritization in the mapping to classify to seafood rather than vegetarian, as vegetarian restaurants are not supposed to cook any kind of animal.\n",
+    "\n",
+    "Another problem could be the wrong classifications. For example, \"STK South Beach\" is a steak house in Miami that would be wrong classified as seafood because of the word \"Beach\". In this case we could use other sources like Google Maps or Facebook to enhance the dataset."
    ]
   }
  ],
