--- a/P3/Project3.ipynb
+++ b/P3/Project3.ipynb
@@ -1074,7 +1074,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This apprach has some issues that have to be addressed. \n",
+    "This approach has some issues that have to be addressed. \n",
     "\n",
     "For instance, \"Mar\" (sea in Portuguese) was mapped to \"seafood\" and \"Terra\" (soil in Portuguese) was mapped to \"vegetarian\". The restaurant \"Restaurante Mar e Terra\" has both words on its name and the classification could be wrong. In this case, we could define a prioritization in the mapping to classify to seafood rather than vegetarian, as vegetarian restaurants are not supposed to cook any kind of animal.\n",
     "\n",
