--- a/P3/Project3.ipynb
+++ b/P3/Project3.ipynb
@@ -1,6 +1,42 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script>jQuery(function() {if (jQuery(\"body.notebook_app\").length == 0) { jQuery(\".input_area\").toggle(); jQuery(\".prompt\").toggle();}});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<button onclick=\"jQuery('.input_area').toggle(); jQuery('.prompt').toggle();\">Toggle code</button>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import IPython.core.display as di\n",
+    "\n",
+    "# This line will hide code by default when the notebook is exported as HTML\n",
+    "di.display_html('<script>jQuery(function() {if (jQuery(\"body.notebook_app\").length == 0) { jQuery(\".input_area\").toggle(); jQuery(\".prompt\").toggle();}});</script>', raw=True)\n",
+    "\n",
+    "# This line will add a button to toggle visibility of code blocks, for use with the HTML export version\n",
+    "di.display_html('''<button onclick=\"jQuery('.input_area').toggle(); jQuery('.prompt').toggle();\">Toggle code</button>''', raw=True)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -62,7 +98,7 @@
    "source": [
     "### 1. Street Types\n",
     "\n",
-    "The code below go through the dataset to find over-abbreviated street types, e.g. \"Rod.\" rather than \"Rodovia\", or typos, e.g. \"Praca\" rather than \"Praça\"."
+    "The first issue found in the dataset was over-abbreviated street types, e.g. \"Rod.\" rather than \"Rodovia\", or typos, e.g. \"Praca\" rather than \"Praça\". The list below shows all occurences of streets that don't start with the expected types."
    ]
   },
   {
@@ -141,7 +177,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The function `update_street_type()` fixes street types using a mapping. The function will be called later during the reshaping phase."
+    "Some street types were fixed using a dict mapping."
    ]
   },
   {
@@ -155,11 +191,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
+      "Mapping:\n",
+      "\n",
+      "{'ESTRADA': 'Estrada',\n",
+      " 'FAZENDA': 'Fazenda',\n",
+      " 'Praca': 'Praça',\n",
+      " 'RODOVIA': 'Rodovia',\n",
+      " 'Rod': 'Rodovia',\n",
+      " 'Rod.': 'Rodovia'}\n",
+      "\n",
+      "Results after fixing the streets:\n",
+      "\n",
       "Rod. Es-080 - Governador José Sette => Rodovia Es-080 - Governador José Sette\n",
-      "ESTRADA PARA PALMEIRAS => Estrada PARA PALMEIRAS\n",
       "ESTRADA 101 APOS POSTO Nossa Senhora do APARECIDA => Estrada 101 APOS POSTO Nossa Senhora do APARECIDA\n",
-      "ESTRADA CAMBOAPINA => Estrada CAMBOAPINA\n",
+      "ESTRADA PARA PALMEIRAS => Estrada PARA PALMEIRAS\n",
       "ESTRADA PARA O ACQUAMANIA => Estrada PARA O ACQUAMANIA\n",
+      "ESTRADA CAMBOAPINA => Estrada CAMBOAPINA\n",
       "RODOVIA BR 262 => Rodovia BR 262\n",
       "FAZENDA SAO DOMINGOS => Fazenda SAO DOMINGOS\n",
       "Praca Henrique Meyerfreund => Praça Henrique Meyerfreund\n",
@@ -175,7 +223,19 @@
     "            \"ESTRADA\": \"Estrada\",\n",
     "            \"FAZENDA\": \"Fazenda\"}\n",
     "\n",
-    "def update_street_type(name):\n",
+    "print('\\nMapping:\\n')\n",
+    "pprint.pprint(mapping)\n",
+    "\n",
+    "def update_street_type(name, mapping):\n",
+    "    \"\"\"Fixes the street type (i.e the first word) of a street using a dict mapping. \n",
+    "    For example, if name == \"Rod. BR-101\" and mapping == {\"Rod\" : \"Rodovia\"}, this function returns \"Rodovia BR-101\"\n",
+    "    Args:\n",
+    "        name: the street name.\n",
+    "        mapping: the dict mapping used to fix the street types\n",
+    "        \n",
+    "    Returns:\n",
+    "        the street name replacing the street type by its corrected version.\n",
+    "    \"\"\"\n",
     "    m = street_type_re.search(name)\n",
     "    if m:\n",
     "        t = m.group()\n",
@@ -183,10 +243,11 @@
     "            return street_type_re.sub(mapping[t], name) \n",
     "    return name\n",
     "\n",
+    "print('\\nResults after fixing the streets:\\n')\n",
     "# validate if the function is working correctly\n",
     "for st_type, ways in st_types.items():\n",
     "    for name in ways:\n",
-    "        fixed = update_street_type(name)\n",
+    "        fixed = update_street_type(name, mapping)\n",
     "        if name != fixed:\n",
     "            print(\"{} => {}\".format(name, fixed))\n"
    ]
@@ -196,7 +257,7 @@
    "metadata": {},
    "source": [
     "### 2. Zip Codes\n",
-    "Brazilian zip code is called CEP and uses the format 00000-000. Also, acording to [Correios](http://www.correios.com.br/) web site, the range of valid zip codes for Vila Velha is between 29100-001 to 29129-999. The code below go through the dataset to find invalid zip codes."
+    "Brazilian zip code is called CEP and uses the format 00000-000. Also, acording to [Correios](http://www.correios.com.br/) web site, the range of valid zip codes for Vila Velha is between 29100-001 to 29129-999."
    ]
   },
   {
@@ -276,7 +337,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The function `update_zipcode` standardize the zip codes to the CEP format and check if the zip code is within the valid range. This function will be called later during the reshape phase."
+    "The zip codes were standardized to the CEP format and checked if it's within the valid range. For example:"
    ]
   },
   {
@@ -290,18 +351,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "29010340 => None\n",
-      "29.053-245 => None\n",
-      "29050705 => None\n",
-      "29041265 => None\n",
-      "29047850 => None\n",
       "29102195 => 29102-195\n",
-      "29102240 => 29102-240\n",
-      "29.100-200 => None\n",
-      "29100000 => None\n",
-      "29010906 => None\n",
       "3149-7327 => None\n",
-      "29017950 => None\n"
+      "29.053-245 => None\n",
+      "29010340 => None\n",
+      "29100000 => None\n",
+      "29041265 => None\n",
+      "29017950 => None\n",
+      "29.100-200 => None\n",
+      "29050705 => None\n",
+      "29047850 => None\n",
+      "29102240 => 29102-240\n",
+      "29010906 => None\n"
      ]
     }
    ],
@@ -325,7 +386,7 @@
    "metadata": {},
    "source": [
     "### Reshape Data to JSON\n",
-    "To be able to import the data into MongoDB, the data has to be reshaped from XML to JSON format. The following rules were applied:\n",
+    "To be able to import the data into MongoDB, the data had to be reshaped from XML to JSON format. The following rules were applied:\n",
     "* process only 2 types of top level tags: \"node\" and \"way\"\n",
     "* all attributes of \"node\" and \"way\" should be turned into regular key/value pairs, except:\n",
     "    - attributes in the CREATED array should be added under a key \"created\"\n",
@@ -428,7 +489,7 @@
     "            if is_zipcode(tag):\n",
     "                v = update_zipcode(v)\n",
     "            elif is_street_name(tag):\n",
-    "                v = update_street_type(v)\n",
+    "                v = update_street_type(v, mapping)\n",
     "\n",
     "            # tags that contains \":\"\n",
     "            split = k.split(\":\")\n",
@@ -558,34 +619,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'_id': ObjectId('58c9865a40efe73b937a4e4f'),\n",
-      " 'created': {'changeset': '6563535',\n",
-      "             'timestamp': '2010-12-06T15:31:54Z',\n",
-      "             'uid': '31385',\n",
-      "             'user': 'Skippern',\n",
-      "             'version': '3'},\n",
-      " 'id': '97464860',\n",
-      " 'pos': [-20.3366098, -40.323035],\n",
-      " 'type': 'node'}\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Check if the data was imported correctly\n",
-    "pprint.pprint((db.vv.find_one()))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -602,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -631,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -642,7 +675,7 @@
        "514356"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -660,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -671,7 +704,7 @@
        "451964"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -689,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -700,7 +733,7 @@
        "62387"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -718,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -729,7 +762,7 @@
        "163"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -747,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -789,108 +822,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### List of amenities"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{'_id': 'school', 'count': 330},\n",
-      " {'_id': 'place_of_worship', 'count': 243},\n",
-      " {'_id': 'parking', 'count': 174},\n",
-      " {'_id': 'kindergarten', 'count': 134},\n",
-      " {'_id': 'restaurant', 'count': 110},\n",
-      " {'_id': 'clinic', 'count': 95},\n",
-      " {'_id': 'fuel', 'count': 90},\n",
-      " {'_id': 'bank', 'count': 78},\n",
-      " {'_id': 'fast_food', 'count': 77},\n",
-      " {'_id': 'pharmacy', 'count': 61},\n",
-      " {'_id': 'police', 'count': 41},\n",
-      " {'_id': 'hospital', 'count': 40},\n",
-      " {'_id': 'community_centre', 'count': 28},\n",
-      " {'_id': 'social_facility', 'count': 26},\n",
-      " {'_id': 'public_building', 'count': 24},\n",
-      " {'_id': 'university', 'count': 21},\n",
-      " {'_id': 'doctors', 'count': 20},\n",
-      " {'_id': 'prison', 'count': 19},\n",
-      " {'_id': 'bench', 'count': 18},\n",
-      " {'_id': 'college', 'count': 14},\n",
-      " {'_id': 'bar', 'count': 14},\n",
-      " {'_id': 'pub', 'count': 13},\n",
-      " {'_id': 'bicycle_parking', 'count': 13},\n",
-      " {'_id': 'toilets', 'count': 13},\n",
-      " {'_id': 'car_wash', 'count': 12},\n",
-      " {'_id': 'taxi', 'count': 12},\n",
-      " {'_id': 'ice_cream', 'count': 12},\n",
-      " {'_id': 'studio', 'count': 11},\n",
-      " {'_id': 'cafe', 'count': 10},\n",
-      " {'_id': 'veterinary', 'count': 10},\n",
-      " {'_id': 'parking_entrance', 'count': 9},\n",
-      " {'_id': 'theatre', 'count': 9},\n",
-      " {'_id': 'bus_station', 'count': 9},\n",
-      " {'_id': 'dentist', 'count': 9},\n",
-      " {'_id': 'love_hotel', 'count': 9},\n",
-      " {'_id': 'courthouse', 'count': 8},\n",
-      " {'_id': 'shelter', 'count': 8},\n",
-      " {'_id': 'post_office', 'count': 8},\n",
-      " {'_id': 'atm', 'count': 7},\n",
-      " {'_id': 'nightclub', 'count': 7},\n",
-      " {'_id': 'townhall', 'count': 7},\n",
-      " {'_id': 'telephone', 'count': 6},\n",
-      " {'_id': 'marketplace', 'count': 6},\n",
-      " {'_id': 'drinking_water', 'count': 6},\n",
-      " {'_id': 'waste_basket', 'count': 4},\n",
-      " {'_id': 'recycling', 'count': 4},\n",
-      " {'_id': 'library', 'count': 4},\n",
-      " {'_id': 'register_office', 'count': 3},\n",
-      " {'_id': 'car_rental', 'count': 3},\n",
-      " {'_id': 'fountain', 'count': 3},\n",
-      " {'_id': 'fire_station', 'count': 2},\n",
-      " {'_id': 'vending_machine', 'count': 2},\n",
-      " {'_id': 'driving_school', 'count': 2},\n",
-      " {'_id': 'grave_yard', 'count': 2},\n",
-      " {'_id': 'nursing_home', 'count': 2},\n",
-      " {'_id': 'arts_centre', 'count': 1},\n",
-      " {'_id': 'embassy', 'count': 1},\n",
-      " {'_id': 'boat_rental', 'count': 1},\n",
-      " {'_id': 'convention_centre', 'count': 1},\n",
-      " {'_id': 'ferry_terminal;bus_station', 'count': 1},\n",
-      " {'_id': 'brothel', 'count': 1},\n",
-      " {'_id': 'cinema', 'count': 1},\n",
-      " {'_id': 'sw', 'count': 1},\n",
-      " {'_id': 'conference_centre', 'count': 1},\n",
-      " {'_id': 'social_centre', 'count': 1},\n",
-      " {'_id': 'motorcycle_parking', 'count': 1}]\n"
-     ]
-    }
-   ],
-   "source": [
-    "top = db.vv.aggregate([\n",
-    "                   {\"$match\" : {\"amenity\" : {\"$exists\" : 1}}},\n",
-    "                   {\"$group\" : {\"_id\" : \"$amenity\", \"count\" : {\"$sum\" : 1}}},\n",
-    "                   {\"$sort\" : {\"count\" : -1}}])\n",
-    "\n",
-    "pprint.pprint((list(top)))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Top 5 most popular cuisines"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -925,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -956,14 +893,12 @@
    "source": [
     "As can be observed, more than 40% of the restaurants don't have the cuisine field defined. This is an issue if this dataset would be used, for instance, by a restaurant recommendation app.\n",
     "\n",
-    "One way to improve the quality of the dataset is to try to infer the cuisine from the restaurant name. For example, if the restaurant has \"Natural\" on its name, we could infer it's a vegetarian restaurant.\n",
-    "\n",
-    "The query below lists the name of all restaurants without cuisine."
+    "One way to improve the quality of the dataset is to try to infer the cuisine from the restaurant name. For example, if the restaurant has \"Natural\" on its name, we could infer it's a vegetarian restaurant."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -972,70 +907,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Grelhados e Massas Restaurante',\n",
-      " 'Saborear',\n",
-      " 'Sabor Natural',\n",
-      " 'Restaurante Porteira',\n",
-      " 'Restaurante Moenda',\n",
-      " 'Restaurante Sol & Mar',\n",
-      " 'Restaurante Perfil',\n",
-      " \"Restaurante Deboni's\",\n",
-      " 'VitaNutri',\n",
-      " 'Restaurante Bom Apetite',\n",
-      " 'Lagoa Grande Restaurante',\n",
-      " 'Restaurante Vista da Mata',\n",
-      " 'Comida Gostosa Self Service',\n",
-      " 'Restaurante Villa Augusta',\n",
-      " 'Lanchonete e Restaurante Schwanz',\n",
-      " 'Outback',\n",
-      " 'Restaurante Vegetariano',\n",
-      " 'Restaurante Paulista',\n",
-      " 'Sabor Riviera Restaurante e Self-Service',\n",
-      " 'Restaurante Cantinho do Sabor',\n",
-      " 'Terra do Sabor Restaurante e Self-Service',\n",
-      " 'Belas Ondas Restaurante',\n",
-      " 'Galantina Self Service',\n",
-      " 'Trindade',\n",
-      " 'Fast Food Maná',\n",
-      " 'Tangerina',\n",
-      " 'Vila Mix Gourmet',\n",
-      " 'Recreio Restaurante',\n",
-      " 'Q.Luxo Self Service',\n",
-      " 'Ilha do Caranguejo',\n",
-      " 'La Rafa',\n",
-      " 'Bifão Steakhouse',\n",
-      " 'Spetacollo',\n",
-      " 'Argento Parrilla',\n",
-      " 'Brazillian Burger',\n",
-      " 'Restaurante Mar e Terra',\n",
-      " 'Restaurante Popular',\n",
-      " 'Restaurante da Tânia',\n",
-      " 'Restaurante Dona Bá',\n",
-      " 'Espaço Sorriso',\n",
-      " 'Timoneiro Restaurante',\n",
-      " 'Simonatto']\n"
-     ]
-    }
-   ],
-   "source": [
-    "query = {\"amenity\":\"restaurant\", \"cuisine\": {\"$exists\" : 0}, \"name\": {\"$exists\" : 1}}\n",
-    "projection = {\"_id\" : 0, \"name\" : 1}\n",
-    "restaurants_without_cuisine = [r[\"name\"] for r in db.vv.find(query, projection)]\n",
-    "\n",
-    "pprint.pprint(restaurants_without_cuisine)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Mapping:\n",
+      "\n",
+      "{'Burger': 'burger',\n",
+      " 'Caranguejo': 'seafood',\n",
+      " 'Grelhados': 'steak_house',\n",
+      " 'Mar': 'seafood',\n",
+      " 'Natural': 'vegetarian',\n",
+      " 'Ondas': 'seafood',\n",
+      " 'Outback': 'steak_house',\n",
+      " 'Steakhouse': 'steak_house',\n",
+      " 'Terra': 'vegetarian',\n",
+      " 'Vegetariano': 'vegetarian'}\n",
+      "\n",
+      "Cuisines inferred from the restaurant's name:\n",
+      "\n",
       "Grelhados e Massas Restaurante => steak_house\n",
       "Sabor Natural => vegetarian\n",
       "Restaurante Sol & Mar => seafood\n",
@@ -1052,6 +938,10 @@
     }
    ],
    "source": [
+    "query = {\"amenity\":\"restaurant\", \"cuisine\": {\"$exists\" : 0}, \"name\": {\"$exists\" : 1}}\n",
+    "projection = {\"_id\" : 0, \"name\" : 1}\n",
+    "restaurants_without_cuisine = [r[\"name\"] for r in db.vv.find(query, projection)]\n",
+    "\n",
     "name_cuisine_mapping = {\n",
     "    \"Grelhados\" : \"steak_house\",\n",
     "    \"Natural\" : \"vegetarian\",\n",
@@ -1063,7 +953,11 @@
     "    \"Ondas\" : \"seafood\",\n",
     "    \"Mar\" : \"seafood\",\n",
     "    \"Terra\": \"vegetarian\"}\n",
+    "print('Mapping:\\n')\n",
+    "pprint.pprint(name_cuisine_mapping)\n",
     "\n",
+    "\n",
+    "print('\\nCuisines inferred from the restaurant\\'s name:\\n')\n",
     "for name in restaurants_without_cuisine:\n",
     "    for k, v in name_cuisine_mapping.items():\n",
     "        if k in name:\n",
