--- a/P5/final_report.ipynb
+++ b/P5/final_report.ipynb
@@ -202,7 +202,7 @@
     "hidePrompt": false
    },
    "source": [
-    "The chart below shows the distribution between POI's and non POI's"
+    "The chart below shows the distribution between POIs and non-POIs"
    ]
   },
   {
@@ -449,8 +449,8 @@
     "Feature | Description \n",
     ":--- | :--- \n",
     "salary | Reflects items such as base salary, executive cash allowances, and benefits payments.\n",
-    "bonus  | Reflects annual cash incentives paid based upon company performance. Also may include other retention payments.\n",
-    "long_term_incentive | Reflects long-term incentive cash payments from various long-term incentive programs designed to tie executive compensation to long-term success as measuredagainst key performance drivers and business objectives over a multi-year period, generally 3 to 5 years.\n",
+    "bonus  | Reflects annual cash incentives paid based upon company performance. Also, may include other retention payments.\n",
+    "long_term_incentive | Reflects long-term incentive cash payments from various long-term incentive programs designed to tie executive compensation to long-term success as measured against key performance drivers and business objectives over a multi-year period, generally 3 to 5 years.\n",
     "deferred_income | Reflects voluntary executive deferrals of salary, annual cash incentives, and long-term cash incentives as well as cash fees deferred by non-employee directors under a deferred compensation arrangement. May also reflect deferrals under a stock option or phantom stock unit in lieu of cash arrangement.\n",
     "deferral_payments | Reflects distributions from a deferred compensation arrangement due to termination of employment or due to in-service withdrawals as per plan provisions.\n",
     "loan_advances | Reflects total amount of loan advances, excluding repayments, provided by the Debtor in return for a promise of repayment. In certain instances, the terms of the promissory notes allow for the option to repay with stock of the company.\n",
@@ -608,7 +608,7 @@
    },
    "source": [
     "### Outliers\n",
-    "The dataset contains a huge outlier as can be observed ploting the *salary* and *bonus* features:"
+    "The dataset contains a huge outlier as can be observed plotting the *salary* and *bonus* features:"
    ]
   },
   {
@@ -641,7 +641,7 @@
     "hidePrompt": false
    },
    "source": [
-    "This outlier is actually a bug in the parser of the financial PDF that extract the row \"TOTAL\" as a person."
+    "This outlier is actually a bug in the parser of the financial PDF that extracts the row \"TOTAL\" as a person."
    ]
   },
   {
@@ -751,7 +751,7 @@
     "hidePrompt": false
    },
    "source": [
-    "Another observation that can be removed after manual review of the dataset is the _\"THE TRAVEL AGENCY IN THE PARK\"_ which is cleary not a person."
+    "Another observation that can be removed after a manual review of the dataset is the _\"THE TRAVEL AGENCY IN THE PARK\"_ which is clearly not a person."
    ]
   },
   {
@@ -1097,7 +1097,7 @@
    },
    "source": [
     "### E-mails exchanged with POI\n",
-    "A set of features that might help to predict POI's is the *from_poi_to_this_person* and *from_this_person_to_poi*. The scatter plot below shows the relation of these features and POI."
+    "A set of features that might help to predict POIs is the *from_poi_to_this_person* and *from_this_person_to_poi*. The scatter plot below shows the relation of these features and POI."
    ]
   },
   {
@@ -1321,15 +1321,15 @@
    },
    "source": [
     "## Machine Learning Algorithm\n",
-    "In order to choose the best algorithm, the performance of 3 different algorithms were compared: Naive Bayes, Decision Tree, and Logistic Regression.\n",
+    "In order to choose the best algorithm, the performance of 3 different algorithms was compared: Naive Bayes, Decision Tree, and Logistic Regression.\n",
     "\n",
     "### Parameter Tuning Strategy\n",
     "\n",
     "Tuning the parameters of an algorithm means adjusting the parameters in a certain way to achieve optimal performance. If the parameters are not tuned well, performance may suffer. The data won't be \"learned\" well and the algorithm won't be able to successfully make predictions on new data.\n",
     "\n",
-    "The tuning process could be very time consuming and tedious if done manually. In order to automate this process, it was used [GridSearchCV](http://scikit-learn.org/stable/modules/generated/sklearn.model_selection.GridSearchCV.html) which allow to test all the combinations of parameters and then report back the best one.\n",
+    "The tuning process could be very time-consuming and tedious if done manually. In order to automate this process, it was used [GridSearchCV](http://scikit-learn.org/stable/modules/generated/sklearn.model_selection.GridSearchCV.html) which allow to test all the combinations of parameters and then report back the best one.\n",
     "\n",
-    "As mentioned earlier, the selection of the best features was added as part of the tuning process using a [Pipeline](http://scikit-learn.org/stable/modules/generated/sklearn.pipeline.Pipeline.html) with two steps: first the _k_ best features are selected using [SelectKBest](http://scikit-learn.org/stable/modules/generated/sklearn.feature_selection.SelectKBest.html) and next, the classification task is perfomed. Then, GridSearchCV was used to find the best _k_ value and the best algorithm parameters."
+    "As mentioned earlier, the selection of the best features was added as part of the tuning process using a [Pipeline](http://scikit-learn.org/stable/modules/generated/sklearn.pipeline.Pipeline.html) with two steps: first, the _k_ best features are selected using [SelectKBest](http://scikit-learn.org/stable/modules/generated/sklearn.feature_selection.SelectKBest.html) and next, the classification task is performed. Then, GridSearchCV was used to find the best _k_ value and the best algorithm parameters."
    ]
   },
   {
@@ -1349,6 +1349,7 @@
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {
+    "collapsed": true,
     "hideCode": false,
     "hidePrompt": false
    },
