--- a/P4/projecttemplate.rmd
+++ b/P4/projecttemplate.rmd
@@ -180,15 +180,6 @@ ggplot(aes(x = elapsedDays), data = ds) +
 
 The number of days to close an issue has a long tail.
 
-```{r echo=FALSE, warning=FALSE}
-ggplot(aes(x = elapsedDays), data = ds) +
-  geom_histogram(binwidth = 0.2) +
-  scale_x_log10()
-```
-
-The number of days to close an issue has a normal distribution on the log10 
-scale.
-
 # Univariate Analysis
 
 ### What is the structure of your dataset?
@@ -265,7 +256,7 @@ ggplot(age_resolved, aes(x=age, y=freq, fill=factor(resolved))) +
   geom_hline(yintercept = resolutionRate)
 ```
 
-The youngest and the oldest age intervals have a little higher resolution rate.
+All age intervals have practically the same resolution rate.
 When the age is not informed, the resolution rate is smaller.
 
 ```{r echo=FALSE}
@@ -284,48 +275,22 @@ Resolution rate for the top 10 most frequent companies. OI S/A is the company
 with most complaints but also has a very high resolution rate.
 
 ```{r echo=FALSE, warning=FALSE}
-qplot(x = ds$elapsedDays, data = ds, binwidth = 5) + 
-  scale_x_continuous(limits = c(0, 500), breaks = seq(0, 500, 20)) +
-  facet_grid(resolved ~ .) 
+ggplot(ds, aes(x = elapsedDays, color=resolved)) +  
+  geom_freqpoly(binwidth=10) +
+  scale_x_continuous(limits = c(0, 500), breaks = seq(0, 500, 20))
 ```
 
 The shape of the distribution of the number of days to close an issue doesn't
 change if the issue was resolved or not.
 
-```{r echo=FALSE}
-ds$elapsedDaysIntervals <- cut( ds$elapsedDays, 
-                                breaks = c(0, 5, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100, 180, 360, 720, 1080, 10^4),
-                                include.lowest = TRUE)
-
-elapseDaysIntervals_resolved <- ds %>%
-  group_by(elapsedDaysIntervals, resolved) %>%
-  summarise (n = n()) %>%
-  mutate(freq = n / sum(n)) %>%
-  arrange(freq)
-
-ggplot(elapseDaysIntervals_resolved, aes(x=elapsedDaysIntervals, y=freq, fill=factor(resolved))) +
-  geom_bar(stat="identity") +
-  geom_hline(yintercept = resolutionRate)
-
+```{r echo=FALSE, warning=FALSE}
+ggplot(ds, aes(x = elapsedDays, color=resolved)) +  
+  geom_density() +
+  scale_x_continuous(limits = c(0, 200), breaks = seq(0, 200, 25))
 ```
 
-The issue has a better chance to be resolved between 5 and 10 days after its
-registration date. After 60 days, the resolution rate starts to decline.
-
-```{r echo=FALSE}
-
-state_gender <- ds %>%
-  group_by(state, gender) %>%
-  summarise (n = n()) %>%
-  mutate(freq = n / sum(n)) %>%
-  arrange(freq)
-
-man_rate = as.double(gender[2, 'freq'])
-
-ggplot(state_gender, aes(x=state, y=freq, fill=factor(gender))) +
-  geom_bar(stat="identity") +
-  geom_hline(yintercept = man_rate)
-```
+The issue has a better chance to be resolved between 25 and 60 days after its
+registration date.
 
 ```{r echo=FALSE}
 
@@ -355,7 +320,7 @@ ggplot(state_resolved_elapsedays, aes(x=state, y=median)) +
 ```
 
 Some states (e.g. AP, PB and TO) have a huge difference between 
-median time to close an issue when it was resolved or not.
+the median time to close an issue when it was resolved or not.
 
 ```{r echo=FALSE}
 
@@ -364,7 +329,7 @@ ggplot(subset(state_resolved_elapsedays, (resolved == 'Y')), aes(x=state, y=medi
 ```
 
 Observing only resolved issues, we can have a better sense of the median time 
-resolve an issue on different states.
+to resolve an issue on different states.
 
 ```{r echo=FALSE}
 
@@ -405,14 +370,6 @@ rate.
 
 # Final Plots and Summary
 
-> **Tip**: You've done a lot of exploration and have built up an understanding
-of the structure of and relationships between the variables in your dataset.
-Here, you will select three plots from all of your previous exploration to
-present here as a summary of some of your most interesting findings. Make sure
-that you have refined your selected plots for good titling, axis labels (with
-units), and good aesthetic choices (e.g. color, transparency). After each plot,
-make sure you justify why you chose each plot by describing what it shows.
-
 ### Resolution rate per state
 ```{r echo=FALSE, Plot_One}
 
@@ -425,16 +382,16 @@ breaks = c(resolutionRate, seq(0, 1, 0.25), max(state_resolved$freq))
 
 ggplot(state_resolved, aes(x=state, y=freq)) +
   geom_bar(stat="identity", fill='#00BFC4') +
-  geom_text(aes(3.8, resolutionRate,label = 'Avg. resolution rate', vjust = -0.5)) +
+  annotate("text", x = 3.1, y = resolutionRate + 0.03, label = "Avg. resolution rate") +
   geom_hline(yintercept = resolutionRate, linetype="dashed") +
   scale_y_continuous(labels = scales::percent, breaks = breaks) +
   xlab('State') + 
   ylab('Resolution rate') +
-  ggtitle("2015 resolution rate per state")
+  ggtitle("Resolution rate per state")
 
 ```
 
-The state where the complaint was filed have a big impact on the chance to it be
+The state where the complaint was filed has a big impact on the chance to it be
 resolved. The difference between the best resolution rate (in PB) and the worst
 (in PR) is 33%.
 
@@ -447,37 +404,69 @@ medianElapsedDaysResolved <- median(ds[resolved == 'Y', 'elapsedDays'])
 state_ordered <- reorder(state_resolved_elapsedays$state, state_resolved_elapsedays$median)
 state_resolved_elapsedays$state <- factor(state_resolved_elapsedays$state, levels(state_ordered))
 
+breaks <- sort(c(medianElapsedDaysResolved, seq(0, 600, 150)))
+
 ggplot(state_resolved_elapsedays, aes(x=state, y=median)) +
   geom_bar(stat="identity", fill = '#00BFC4') +
-  geom_text(aes(3.0, medianElapsedDaysResolved,label = 'Median interval', vjust = -0.5)) +
+  annotate("text", x = 2, y = medianElapsedDaysResolved +20, label = "Median") +
   geom_hline(yintercept = medianElapsedDaysResolved, linetype="dashed") +
+  scale_y_continuous(breaks = breaks) +
   xlab('State') + 
   ylab('Days') +
-  ggtitle("2015 median interval to resolve an issue per state") 
+  ggtitle("Median interval to resolve an issue per state") 
 ```
 
-
+Different states vary a lot the interval between the registration and close date.
+The chart above shows the median interval to resolve an issue (resolved = 'Y')
+per state.
 
 ### Plot Three
-```{r echo=FALSE, Plot_Three}
+```{r echo=FALSE, Plot_Three, warning=FALSE}
 
+breaks = sort(c(24, 64, seq(100, 250, 50)))
+
+ggplot(ds, aes(x = elapsedDays)) +  
+  geom_density(aes(color = resolved), alpha=0.4) +
+  scale_x_continuous(limits = c(0, 250), breaks = breaks) +
+  geom_vline(xintercept=24, linetype="dashed") +
+  geom_vline(xintercept=64, linetype="dashed") +
+  xlab('Elapsed days between regisration and close date') + 
+  ggtitle("Density curve of the elapsed days interval")
 ```
 
-### Description Three
+The chart above shows that the interval between 24 and 64 days has a greater
+density of resolved issues, i.e. the resolution rate is greater,
+as can be observed in the table below:
+
+```{r echo=FALSE, Plot_Three_Aux_Table, warning=FALSE}
+ds$elapsedDaysIntervals <- cut( ds$elapsedDays, 
+                                breaks = c(0, 25, 64, 10^4),
+                                include.lowest = TRUE)
+
+elapseDaysIntervals_resolved <- ds %>%
+  group_by(elapsedDaysIntervals, resolved) %>%
+  summarise (n = n()) %>%
+  mutate(freq = n / sum(n)) %>%
+  arrange(desc(resolved), elapsedDaysIntervals)
+
+kable(head(elapseDaysIntervals_resolved[elapseDaysIntervals_resolved$resolved == 'Y', c(1, 4)]))
+```
+
+This information will help to build a predictive model in a future work.
 
 ------
 
 # Reflection
 
-Ideas for the future. Use data from other years to analyse the trends in data.
-Come up with an indicator of the quality of the Procon considering the resolution
-rate and the time it takes to resolve the issue. Come up with an indicator for
-the companies.
+This exploratory analysis gave an overview of the performance of Procons in 
+different states. For example, in Brasilia, capital of Brazil, the Procon has
+a very poor performance in both the resolution rate (second worst) and
+the time it took to resolve an issue (almost 2 years).
 
-> **Tip**: Here's the final step! Reflect on the exploration you performed and
-the insights you found. What were some of the struggles that you went through?
-What went well? What was surprising? Make sure you include an insight into
-future work that could be done with the dataset.
+Ideas for the future:
 
-> **Tip**: Don't forget to remove this, and the other **Tip** sections before
-saving your final work and knitting the final report!
+* Use data from other years to analyse trends in data.
+* Come up with an indicator of the quality of the Procon considering the resolution
+rate and the time it takes to resolve the issue.
+* Come up with an indicator for the companies.
+* Come up with a predictive model to give the probability of an issue be resolved.
